# fastapi-tutorial

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  config.py  conftest.py  main.py  pyproject.toml  schemas.py  test_main.py
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
routers/: system.py  tickets.py
