[project]
name = "fastapi-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "pydantic[email]>=2.13.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "anyio>=4.14.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.0.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", ".git", "__pycache__"]
